# dVLA-AD

./: .gitignore  README.md
docs/: denoise_algorithm.md
eval/: template_official.py  template_v3.py
scripts/: _ar_ab_worker.py  _explen_worker.py  ade_comparison.py  ade_n30_ab.py  ade_n30_section_align.py  compare_latency_sglang_vs_transformers.py  convert_ddrive_to_dvlm.py  explanation_diversity_report.py  framework_benchmark.py  run_10_waymo_compare.py  run_5_waymo_fastdvlm.py  run_5_waymo_sglang.py  run_5_waymo_sglang_v3.py  run_dvlm_ddrive_v3_template.py  run_dvlm_with_ddrive_code.py  (+29 more)
sft_stage/: README.md  RESUME.md  plan.md  pyproject.toml  requirements.txt  run_chatbot.py  run_eval.sh  run_metrics.sh  run_multi_infer.py  run_pretrain_infer.py
sft_stage/data/: README.md  convert_dvlm_ad_to_v3.py  data_convert.py  join_images.py
sft_stage/data/example/: sample.json  v3_train_sample.json  v3_train_sample_joint.json
sft_stage/eval/: batch_inference.py  evaluate_waymo_metrics.py  waymo_rfs_utils.py
sft_stage/lmflow/: args.py
sft_stage/lmflow/datasets/: __init__.py  multi_modal_dataset.py  multi_modal_dataset_fast_ddrive.py
sft_stage/lmflow/models/: auto_model.py
sft_stage/lmflow/models/qwen2_5_vl_mdm/: __init__.py  configuration.py
sft_stage/lmflow/pipeline/: finetuner.py  rm_tuner.py
sft_stage/lmflow/utils/: versioning.py
sft_stage/lmflow/utils/conversation_template/: __init__.py  qwen.py
sft_stage/train_scripts/: ds_config_zero2.json  finetune_fast_ddrive.py  section_eval_callback.py  train_v3_mdm.sh  train_v3_sasd.sh  train_waymo_sasd.sh
(+82 files in other folders)
